--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   font-family: "Open Sans", sans-serif !important;
   background: #ebe9e9; overflow-x: hidden;
 }
+body.dark {background: #071739 !important;}
 
 ::-webkit-scrollbar {width: 5px !important; height: 5px !important}
 ::-webkit-scrollbar-thumb {background: #0858f7 !important}
@@ -97,6 +98,8 @@ body.dark .dropdown_list li.MuiButtonBase-root {background-color: #12254e !impor
 .main .sidebarWrapper .sidebar {width: 20%; height: 100vh; max-height: calc(100%-70px); position: fixed; top: 70px; left: 0px; background: #FFF;
   overflow-y: scroll; overflow-x: hidden; padding-bottom: 40px; transition: all 0.3s;}
 
+body.dark .main .sidebarWrapper .sidebar {background: #112143 !important;}
+
 .main .sidebarWrapper .sidebar::-webkit-scrollbar {width: 3px !important;}
 .main .sidebarWrapper .sidebar::-webkit-scrollbar-thumb {background: transparent !important;}
 .main .sidebarWrapper:hover .sidebar::-webkit-scrollbar {background: #0858f7 !important;}
@@ -106,20 +109,34 @@ body.dark .dropdown_list li.MuiButtonBase-root {background-color: #12254e !impor
 .main .sidebarWrapper .sidebar ul li button {color: rgba(0, 0, 0, 0.7); text-align: left; justify-content: left; border-radius: 10px !important;
   padding: 12px 10px !important; font-weight: 500 !important; font-family: "Open Sans", sans-serif !important;
   align-items: center; text-transform: capitalize !important; font-size: 15px !important;}
+
 .main .sidebarWrapper .sidebar ul li button:hover {background: #f1f1f1 !important;}
+body.dark .main .sidebarWrapper .sidebar ul li button:hover {background: rgba(255, 255, 255, 0.1) !important;}
+
 .main .sidebarWrapper .sidebar ul li button.active {background: #f1f1f1 !important;}
+body.dark .main .sidebarWrapper .sidebar ul li button.active {background: rgba(255, 255, 255, 0.1) !important;}
+
 .main .sidebarWrapper .sidebar ul li button.active .arrow {transform: rotate(90deg);}
 .main .sidebarWrapper .sidebar ul li button * {color: #5e5d72;}
 .main .sidebarWrapper .sidebar ul li button .icon {display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
 .main .sidebarWrapper .sidebar ul li button .icon svg {font-size: 22px;}
 .main .sidebarWrapper .sidebar ul li button .arrow {margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; transition: all 0.3s ease-in-out;}
 
+body.dark .main .sidebarWrapper .sidebar ul li button {color: rgba(255, 255, 255, 0.8) !important;}
+
 .main .sidebarWrapper .sidebar ul .submenu {padding: 0px 45px; position: relative; transition: all 0.3s;}
+
 .main .sidebarWrapper .sidebar ul .submenu::before {content: ''; width: 1px; height: 95%; position: absolute; top: 0px; left: 25px; background: rgba(0, 0, 0, 0.2);}
+body.dark .main .sidebarWrapper .sidebar ul .submenu::before {background: rgba(255, 255, 255, 0.2);}
+
 .main .sidebarWrapper .sidebar ul .submenu li {width: 100%; list-style: none;} /* Create left line */
+
 .main .sidebarWrapper .sidebar ul .submenu li a {color: #5e5d72 !important; text-decoration: none; display: block; padding: 6px 0px;
   font-size: 16px; font-weight: 500; transition: all 0.3s;}
+body.dark .main .sidebarWrapper .sidebar ul .submenu li a {color: rgba(255, 255, 255, 0.7) !important;}
+
 .main .sidebarWrapper .sidebar ul .submenu li a:hover {color: #0858f7 !important;}
+body.dark .main .sidebarWrapper .sidebar ul .submenu li a:hover {color: #0858f7 !important;}
 
 .main .sidebarWrapper .sidebar ul .submenu .submenuWrapper {transition: all 0.4s; height: 0px; overflow: hidden;}
 .main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapsed .submenu {opacity: 0; padding: 10px 0px;}
@@ -130,6 +147,8 @@ body.dark .dropdown_list li.MuiButtonBase-root {background-color: #12254e !impor
 .logoutWrapper {padding: 0px 25px;}
 .logoutWrapper .logoutBox {width: 100%; height: 130px; padding: 25px; background: #bcd2fd; border-radius: 10px; display: flex; align-items: center;
   justify-content: center; position: relative; overflow: hidden;}
+body.dark .logoutWrapper .logoutBox {background: linear-gradient(rgba(var(#183e8c), 25%), rgba(var(#163474), 40%)) !important;
+  background: transparent; background-image: linear-gradient(#183e8c, #163474);}
 .logoutWrapper .logoutBox::before {content: ''; width: 70px; height: 70px; background: #0858f7; border-radius: 100%; position: absolute; top: -20px; right: -20px; opacity: 0.5;}
 .logoutWrapper .logoutBox::after {content: ''; width: 70px; height: 70px; background: #0858f7; border-radius: 100%; position: absolute; top: 20px; left: 10px; opacity: 0.5;}
 .logoutWrapper .logoutBox button {font-size: 14px !important; font-weight: 600 !important;}
