--- a/src/App.css
+++ b/src/App.css
@@ -218,6 +218,10 @@ body.dark .css-1d3z3hw-MuiOutlinedInput-notchedOutline {border-color: rgba(255, 
 .table-responsive::-webkit-scrollbar-thumb {background: #CCC !important;}
 body.dark .table-responsive::-webkit-scrollbar-thumb {background: rgba(255, 255, 255, 0.1) !important;}
 
+.slick-slide {outline: none !important;}
+
+body.dark .table-striped tbody tr:nth-of-type(odd) {background: rgba(0, 0, 0, 0.2) !important;}
+
 .table .thead-dark th {background-color: #1866ee !important; border-color: rgba(255, 255, 255, 0.1) !important; font-size: 13px !important;}
 .table tbody td {font-size: 14px !important; color: #2f2d3e; font-weight: 500;}
 .table tbody .actions button {min-width: 32px !important; width: 32px !important; height: 32px !important; margin: 0px 3px !important;}
