--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,8 @@ body.dark .cardFilters .col-md-3 h4 {color: rgba(255, 255, 255, 0.8);}
 
 h1, h2, h3, h4, h5, h6, p {color: #403e57;}
 
+h4 {line-height: 32px;}
+
 body.dark .css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root,
 body.dark h1,
 body.dark h2,
@@ -302,13 +304,22 @@ body.dark .MuiChip-label {color: rgba(255, 255, 255, 0.7) !important;}
 .sliderSml .slick-slide {padding-right: 10px;}
 .sliderSml .slick-slide .item {border-radius: 7px !important; overflow: hidden;}
 .sliderSml *, .sliderBig * {overflow: hidden; border-radius: 7px;}
+.sliderBig {overflow: hidden; border-radius: 10px;}
 .sliderBig .item {overflow: hidden; border-radius: 7px;}
 
 body.dark .productInfo {color: rgba(255, 255, 255, 0.7) !important;}
-.productDetailsSection .productInfo .icon {width: 18%; flex: 0 0 10%;}
+.productDetailsSection .productInfo .icon {width: 28%; flex: 0 0 28%;}
 .productDetailsSection .productInfo .icon svg {font-size: 22px;}
-.productDetailsSection .productInfo .name {width: 82%; flex: 0 0 80%; padding-top: 2px; font-size: 15px;}
-.productDetailsSection .productInfo .row .col-sm-7 span {opacity: 0.8; font-size: 15px; padding-left: 10px;}
+.productDetailsSection .productInfo .name {width: 72%; flex: 0 0 72%; padding-top: 2px; font-weight: 600; font-size: 15px;}
+body.dark .productDetailsSection .productInfo .name {color: rgba(255, 255, 255, 0.8) !important;}
+.productDetailsSection .productInfo .row {margin-bottom: 10px !important;}
+.productDetailsSection .productInfo .row .col-sm-9 {display: flex; align-items: center;}
+.productDetailsSection .productInfo .row .col-sm-9 span {opacity: 0.8; font-size: 15px; padding-left: 20px;}
+
+.tags {margin-bottom: 0px !important;}
+.tags li span {display: flex; align-items: center; justify-content: center; background: #1b2b4d !important;
+  border-radius: 5px !important; font-size: 13px !important; padding: 5px 10px !important;}
+/* .tags li span:first-child {padding-left: 0px !important;} */
 
 /*
 .form .form-group {margin-bottom: 15px;}
