--- a/src/App.css
+++ b/src/App.css
@@ -324,12 +324,15 @@ body.dark .productDetailsSection .productInfo .name {color: rgba(255, 255, 255, 
 /* .tags li span:first-child {padding-left: 0px !important;} */
 
 .ratingSection {width: 500px;}
-.ratingSection .ratingrow {width: 100%;}
+.ratingSection .ratingrow {width: 100%; margin-bottom: 15px !important;}
 .ratingSection .ratingrow .progress {height: 3px !important; background: #000 !important;}
 .ratingSection .ratingrow .progress .progress-bar {background: #edb213 !important;}
 .ratingSection .ratingrow .col1 {width: 15%; flex: 0 0 15%; display: flex;}
 .ratingSection .ratingrow .col2 {width: 50%; flex: 0 0 25%;}
 .ratingSection .ratingrow .col3 {width: 25%; flex: 0 0 25%; display: flex; padding-left: 20px;}
+
+.reviewSection {width: 100%; display: flex; flex-direction: column;}
+.reviewSection .reviewsRow {width: 100%; height: 100px; background: #071739; padding: 35px; border-radius: 10px}
 
 /*
 .form .form-group {margin-bottom: 15px;}
