--- a/src/App.css
+++ b/src/App.css
@@ -360,6 +360,14 @@ body.light .reviewForm textarea::-webkit-input-placeholder {color: rgba(0, 0, 0,
 
 body.light .reviewForm textarea {background: #f4f4f4 !important; color: rgba(0, 0, 0, 0.8) !important; border: 1px solid #dbdbdb !important;}
 
+.form .form-group {margin-bottom: 25px;}
+.form .form-group h6 {margin-bottom: 10px; font-size: 13px;}
+.form .form-group input, .form .form-group textarea {background: #fafafa; width: 100%; outline: none !important;
+  border: 1px solid rgba(0, 0, 0, 0.1) !important; height: 40px; padding-left: 15px; border-radius: 5px; font-size: 14px;}
+  .form .form-group textarea {height: 120px; padding-top: 15px;}
+body.dark .form .form-group input, body.dark .form .form-group textarea {background: #2b3c5f !important; border: 1px solid #253557 !important;
+  color: rgba(255, 255, 255, 0.8) !important;}
+
 .userInfo h6 {margin-bottom: 0px;}
 
 /*
