--- a/src/App.css
+++ b/src/App.css
@@ -380,3 +380,12 @@ body.dark .form .form-group input, body.dark .form .form-group textarea {backgro
 
 /* Box Blade Detail */
 .bladeBox {text-align: center; padding: 35px 0px;}
+
+/* ================== NVHAI ================== */
+.new span {display: flex; align-items: center; justify-content: center;
+  background: #04AA6D !important; color: #FFF !important; font-weight: 700;
+  border-radius: 5px !important; font-size: 14px !important; padding: 5px 10px !important;}
+
+.process span {display: flex; align-items: center; justify-content: center;
+  background: #FFF4A3 !important; color: #000 !important; font-weight: 700;
+  border-radius: 5px !important; font-size: 14px !important; padding: 5px 10px !important;}
